# rust-mnist

./: Cargo.toml  mnist.ipynb
src/: main.rs
