[package]
name = "mnist-dfdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = {version="*", git="https://github.com/coreylowman/dfdx", features=["cuda"]}
mnist = "0.5.0"
indicatif = "0.17.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }

[features]
default = ["cuda"]
cuda = []